# text-game-engine

./: .gitignore  AGENTS.md  MIGRATION_CHECKLIST.md  README.md  pyproject.toml
docs/: backends.md  examples.md  persistence.md  sdk.md  source-material.md
examples/: README.md
scripts/: backfill_speech_style.py
src/text_game_engine/: __init__.py  completion_phase.py  tool_aware_llm.py  zork_emulator.py
src/text_game_engine/backends/: __init__.py  adapters.py  base.py  claude_cli.py  codex_cli.py  factory.py  gemini_cli.py  ollama.py  opencode_cli.py  prompt_formatting.py  zai.py
src/text_game_engine/core/: __init__.py  ascii_map.py  attachments.py  dice.py  emulator_ports.py  engine.py  minigames.py  normalize.py  ports.py  prose_sanitizer.py  puzzles.py  source_material_memory.py  types.py
src/text_game_engine/persistence/sqlalchemy/: repos.py
tests/: test_ascii_map.py  test_cli_backends.py  test_codex_backend.py  test_dice.py  test_engine_flow.py  test_engine_puzzles.py  test_memory_and_json_fixes.py  test_minigames.py  test_ollama_backend.py  test_progress_callback.py  test_puzzles.py  test_source_material_digest.py  test_zork_emulator_compat.py  test_zork_emulator_parity_core.py
